k8s/altair/apps/downloads/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
