k8s/altair/apps/downloads/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 7878
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 8686
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 6767
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 9696
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 8191
---
apiVersion: v1
kind: Service
metadata:
  name: profilarr
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 6868
---
apiVersion: v1
kind: Service
metadata:
  name: music-grabber
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: downloads
spec:
  selector:
    app: downloads
  ports:
    - port: 80
      targetPort: 5030
